# pico-sdk-freertos-template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  hello_freertos.c
